<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Colloc</string>
    <string name="app_id">675445415858318</string>
    <string name="title_activity_flat">FlatActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log in with Facebook</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="title_activity_new_flat">Add new flat</string>
    <string name="title_activity_add_new_flat">Create new flat</string>
<<<<<<< HEAD
    <string name="logout">Logout</string>
    <string name="leave_flat">Leave flat</string>
    <string name="change_details">Change details</string>
    <string name="flat_settings">FLAT SETTINGS</string>
    <string name="user_settings">USER SETTINGS</string>
    <string name="last_activities">Last activities</string>
    <string name="title_activity_change_details">Change flat details</string>
    <string name="title_activity_flat_login">Join an existing flat</string>
=======
	<string name="logout">Logout</string>
	<string name="leave_flat">Leave flat</string>
	<string name="change_details">Change details</string>
	<string name="flat_settings">FLAT SETTINGS</string>
	<string name="user_settings">USER SETTINGS</string>
	<string name="last_activities">Last activities</string>
	<string name="title_activity_change_details">Change flat details</string>
	
	 <!-- ilyas added those lignes below -->
	 <drawable name="Blue">#b0e0e6</drawable>
     <drawable name="white">#ffffff</drawable>
     <drawable name="black">#000000</drawable>
     <drawable name="green">#347C2C</drawable>
     <drawable name="pink">#FF00FF</drawable>
     <drawable name="violet">#a020f0</drawable>
     <drawable name="grey">#cccccc</drawable>
     <drawable name="red">#C11B17</drawable>
     <drawable name="yellow">#FFFF8C</drawable>
     <drawable name="PowderBlue">#b0e0e6</drawable>
     <drawable name="brown">#2F1700</drawable>
     <string name="select_Category">Select Company</string>
     <drawable name="darkgrey">#606060</drawable>
>>>>>>> FETCH_HEAD

</resources>
