<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/a"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_marginBottom="3dp"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="10dp"
		android:text="@string/flat_settings"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="#5e5e5e"
		android:textStyle="bold" />

	<View
		android:id="@+id/b"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_below="@+id/a"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:background="#5e5e5e" />

	<TextView
		android:id="@+id/textViewChangeDetails"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/b"
		android:layout_marginTop="5dp"
		android:background="@drawable/selector_background_item_settings"
		android:clickable="true"
		android:paddingBottom="10dp"
		android:paddingLeft="30dp"
		android:paddingTop="10dp"
		android:text="@string/change_details"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
		android:id="@+id/textViewChangePassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textViewChangeDetails"
		android:layout_marginTop="5dp"
		android:background="@drawable/selector_background_item_settings"
		android:clickable="true"
		android:paddingBottom="10dp"
		android:paddingLeft="30dp"
		android:paddingTop="10dp"
		android:text="@string/change_password"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
		android:id="@+id/textViewLeaveFlat"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textViewChangePassword"
		android:background="@drawable/selector_background_item_settings"
		android:clickable="true"
		android:paddingBottom="10dp"
		android:paddingLeft="30dp"
		android:paddingTop="10dp"
		android:text="@string/leave_flat"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
		android:id="@+id/textViewFlatId"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginTop="5dp"
		android:gravity="center"
		android:paddingBottom="10dp"
		android:paddingTop="10dp"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
		android:id="@+id/c"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textViewLeaveFlat"
		android:layout_marginBottom="3dp"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="10dp"
		android:text="@string/user_settings"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="#5e5e5e"
		android:textStyle="bold" />

	<View
		android:id="@+id/d"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_below="@+id/c"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:background="#5e5e5e" />

	<TextView
		android:id="@+id/textViewLogout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/d"
		android:layout_marginTop="5dp"
		android:background="@drawable/selector_background_item_settings"
		android:clickable="true"
		android:paddingBottom="10dp"
		android:paddingLeft="30dp"
		android:paddingTop="10dp"
		android:text="@string/logout"
		android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>